--- a/client/pages/dashboards/normal/normal.html
+++ b/client/pages/dashboards/normal/normal.html
@@ -42,7 +42,7 @@
       $('.row'+row).addClass('selectedRow');
     });
 
-    $('td').click(function () {
+    $('td.table-value').click(function () {
       $('.selectedRow').removeClass('selectedRow');
       $('.selectedCol').removeClass('selectedCol');
       var row = $(this).data('row');
@@ -68,7 +68,7 @@
         tableHtml = tableHtml + "<td class='row-selector' data-row='"+ String(Math.round(row * 100) / 100).replace('.', '-') +"'>" + (Math.round(row * 100) / 100) + "</td>";
         var col = startCol;
         while (col <= endCol) {
-          tableHtml = tableHtml + "<td data-row='"+row+"' data-column='"+col+"' class='row"+ String(Math.round(row * 100) / 100).replace('.', '-') +" col"+ String(Math.round(col * 100) / 100).replace('.', '-') +"'>" + compute((Math.round((row+col) * 100) / 100), 0, 1) + "</td>";
+          tableHtml = tableHtml + "<td data-row='"+row+"' data-column='"+col+"' class='table-value row"+ String(Math.round(row * 100) / 100).replace('.', '-') +" col"+ String(Math.round(col * 100) / 100).replace('.', '-') +"'>" + compute((Math.round((row+col) * 100) / 100), 0, 1) + "</td>";
           col = col + stepCol;
         }
         tableHtml = tableHtml + "</tr>";
