Add Google Tracking

--- a/client/main.html
+++ b/client/main.html
@@ -9,6 +9,16 @@
   <meta property="og:image" content="https://afeld.github.io/emoji-css/emoji/bar_chart.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://stats.juangesino.com/" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73455145-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-73455145-2');
+  </script>
+
 </head>
 
 <body></body>
